i added zap to the project and created the first log for the new division function
