# backend/internal/routes/calculator.go
@@ -15,6 +15,7 @@ func calculatorRoutes(router *gin.Engine, calculatorService services.CalculatorS
 		calculatorGroup.GET("/add/:num1/:num2", func(c *gin.Context) { addition(c, calculatorService) })
 		calculatorGroup.GET("/sub/:num1/:num2", func(c *gin.Context) { subtraction(c, calculatorService) })
 		calculatorGroup.GET("/count", func(c *gin.Context) { count(c, calculatorService) })
+		calculatorGroup.GET("/division/:num1/:num2", func(c *gin.Context) { division(c, calculatorService) })
 	}
 }
 
@@ -83,4 +84,37 @@ func subtraction(c *gin.Context, calculatorService services.CalculatorService) {
 // @Router		/calculator/count [get]
 func count(c *gin.Context, calculatorService services.CalculatorService) {
 	c.JSON(http.StatusOK, gin.H{"count": calculatorService.GetOperation()})
+}
+
+// @Summary 	Division of two numbers
+// @Tags Calculator
+// @Accept		json
+// @Produce		json
+// @Param		num1	path	int	true	"First number"
+// @Param		num2	path	int	true	"Second number"
+// @Success		200
+// @Failure		400 "Bad Request"
+// @Router		/calculator/division/{num1}/{num2} [get]
+func division(c *gin.Context, calculatorService services.CalculatorService) {
+	num1_str := c.Param("num1")
+	num2_str := c.Param("num2")
+
+	num1, err := strconv.Atoi(num1_str)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid num1"})
+		return
+	}
+	num2, err := strconv.Atoi(num2_str)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid num2"})
+		return
+	}
+
+	result, serviceErr := calculatorService.Division(num1, num2)
+	if serviceErr != nil {
+		c.JSON(http.StatusBadRequest, serviceErr)
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"result": result})
 }
